--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -428,7 +428,7 @@ margin-bottom: 30px
 .contacts h3{
 color: #333;
 font-weight: 700;
-margin-bottom: 30px
+margin-bottom: 30px;
 }
 .contacts p{
 color: #777;
